assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Roboto:wght@100&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-family: Bangers, sans-serif;
    color: black;
    position: absolute;
    width: 100vw;
    /*line-height: 1.6;*/
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: black;
}

h1,
h2 {
    font-weight: 300;
    line-height: 1.2;
    margin: 10px 0;
}

p {
    font-family: Roboto, sans-serif;
    margin: 10px 0;
}

img {
    width: 100%;
}

/* Navbar */

.navbar {
    color: black;
    height: 70px;

}

.navbar ul {
    display: flex;

}

.navbar a {
    padding: 5px;
    margin: 0 5px;
}

.navbar a:hover {
    color: #786C44;
}

.navbar .flex {
    justify-content: space-between;
}


/* utilities*/

.container {
    max-width: 2000px;
    margin: 0 auto;
    overflow: auto;
    padding: 0 10px;
}

.card {
    background-color: white;
    color: black;
    /* border-radius: 10px;*/
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
    padding: 40px;
    margin: 20px;
}

.contact-form-card {
    background-color: white;
    color: black;
    /* border-radius: 10px;*/
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
    padding: 40px;
    margin: 20px;

}

.btn1 {
    display: inline-block;
    padding: 10px 30px;
    cursor: pointer;
    color: black;
    background-color: #CBE0E8;
    border: 1px;
    border-radius: 2px;
    transition: 500ms ease all;

}

.btn-outline {
    background-color: #CBE0E8;
    border: none;
}

.btn1:hover {
    background-color:#6bbedf ;
    transform: scale(0.98);

}


.flex {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.grid {
    display: grid;
    grid-template-columns: 500px 700px;
    gap: 10px;
    justify-content: space-around;
    align-items: center;
    height: 100%;

}

/*.grid2 {
    display: gird;
    grid-template-columns: 100%;
    justify-content: space-around;
    align-items: center;
    height: 30%;
}*/


/* Hero Image */

.hero {
    height: 100vh;
    background-image: url(../images/Hero_Image_1.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

label {
    margin: 0 10px 0 0;
    font-size: 40px;
    display: none;
}

#toggle {
    display: none;
}

/* gallery page */

.image-grid {
    --gap: 16px;
    --num-cols: 4;
    --row-height: 300px;

    box-sizing: border-box;
    padding: var(--gap);

    display: grid;
    grid-template-columns: repeat(var(--num-cols), 1fr);
    grid-auto-rows: var(--row-height);
    gap: var(--gap);
}

.image-grid>img {
    width: 100%;
    height: 100%;
    object-fit: cover;


}

/*.image-grid img:hover {
    transition: transform 0.2s ease-in;
} */



/* About Page */

#header-about {
    background-color: white;
}
.background-about {
    height: 100vh;
    background-image: url(../images/Background-about-page-desktop.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

/* Craig*/

.craig {
    height: 600px;
    background-color: rgba(0, 0, 0, 0.2);
    position: relative;
    font-weight: 50px;

}

.craig-image {
    padding: 5px;
    margin-top: 40px;

}

.wall-of-prints {
    margin-bottom: 40px;
}

.bg-contact {
    height: 100vh;
    background-image: url(../images/background-image-contact-3.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

/* Contact */

.contact-wrap {
    height: 50vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact-top {
    width: 500px;
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
    background-color: white;
}

.contact-form {
    padding: 10% 10% 10%;
    display: flex;
    flex-direction: column;
}

.contact-form h3 {
    font-weight: 100;
    text-align: center;
    margin-bottom: 5%;
}

.contact-form p {
    text-align: center;
    margin: 0;
    padding: 0;
}

form {
    margin-top: 20px;
}

.input-wrap {
    display: flex;
    align-items: center;
    margin-bottom: 2%;
}

textarea {
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 500;
    padding: 4px 0;
    width: 100%;
    border: none;
    border-bottom: 1px solid #d1ccbd ;
    transition: 500ms ease all; 
}

.input-wrap button {

    
}

input {
    font-size: 14px;
    font-weight: 500;
    padding: 4px 0;
    width: 100%;
    border: none;
    border-bottom: 1px solid #d1ccbd ;
    transition: 500ms ease all;

}

input:focus {
    outline: none;
    box-shadow: 0 1px 0 0 #786C44;
    border-color: #786C44 ;
}

textarea:focus {
    outline: none;
    box-shadow: 0 1px 0 0 #786C44;
    border-color: #786C44 ;

}
/* socials footer */

.footer-landing {
    background-color: red;
}

.footer a:hover {
    color: #786C44;
}

.ft-social {
    padding: 0 1.875rem 1.25rem;
}

.ft-social-list {
    display: flex;
    justify-content: center;
    border-top: 1px #777 solid;
    padding-top: 1.25rem;

}

.ft-social-list li {
    margin: 0.5rem;
    font-size: 1.25rem;
    list-style-type: none;

}

.ft-social-list li a {
    color: inherit;
}

.ft-legal {
    display: flex;
    justify-content: flex-end;
    margin: 0.125rem 0.625rem;
}



/* Small devices under 500px */
@media (max-width: 500px) {

    label {
        display: block;
        cursor: pointer;
    }

    #menu {
        text-align: center;
        width: 100%;
        display: none;

    }

    #menu a {
        display: block;
        /*border-bottom: 1px solid black;*/
    }

    #toggle:checked~#menu {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        /*flex-grow: 3;
        text-align: left;*/
    }

    #header {
        align-items: unset;
        flex-direction: row-reverse;
    }

    .image-grid {
        --num-cols: 2;
        --row-height: 200px;

    }

    .grid {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr;
    }

    .contact-top {
        width: 300px;
    }




}



/* Medium devices (tablets and up) */
@media (min-width: 501px) and (max-width: 768px) {

    .image-grid {
        --num-cols: 3;
        --row-height: 200px
    }

    .grid {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr;
    }

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .image-grid {
        --num-cols: 5;
        --row-height: 300px
    }
}

